<resources>
    <string name="app_name">OctopusMart</string>
    <string name="octopus_mart"> سوق اكتوبوس </string>
    <string name="mobile_tablet">موبيلات و تابلت</string>
    <string name="clothes">ملابس</string>
    <string name="user_name_dumm">اسم المستخدم</string>
    <string name="cart_text">العربه</string>
    <string name="full_amount">المبلغ الكلي</string>
    <string name="rating">التقيم</string>
    <string name="rating_dumm">التقيم 4/5</string>
    <string name="add_favorite">اضف للمفضلة</string>
    <string name="dummy_title">سامسونج جلاكسي 64 جيجا الجيل الرابع رمادي سامسونج جلاكسي 64 جيجا الجيل الرابع رمادي  </string>
    <string name="sale">خصم 20%</string>
    <string name="main_specs">المواصفات الاساسية</string>
    <string name="most_popular">الأكثر رواجا</string>
    <string name="pager_dumm">سامسونج جلاكسي اس 8 64 جيجا رمادي</string>
    <string name="watch_now">شاهد الآن</string>
    <string name="date_dumm">12/2/2017</string>
    <string name="item_dumm">سامسونج جلاكسي اس 8 64 جيجا رمادي</string>
    <string name="price_dumm">8000.00 جنيه</string>
    <string name="other_products">هذا الطلب به</string>
    <string name="history_text">العملية السابقة</string>
    <string name="favorite_text">المفضلة</string>
    <string name="full_price">السعر الكلي :</string>
    <string name="delivery_done">تم الاستلام</string>
    <string name="making_order">تجهيز الطلب</string>
    <string name="delivery">جاري التسليم</string>
    <string name="order_text">رقم الطلب : 567-879</string>
    <string name="home">الرئيسية</string>
    <string name="share_app_text">مشاركة التطبيق</string>
    <string name="categories_text">الاقسام</string>
    <string name="all_categories_text">كل الفئات</string>
    <string name="electronics_text">الاجهزه الالكترونية</string>
    <string name="clothes_text">الملابس</string>
    <string name="clothes_dump">سوتشيرت رجالي أحمر</string>
    <string name="see_more_text">شاهد المزيد</string>
    <string name="more_text">المزيد</string>
    <string name="health_beauty_text">الصحة والجمال</string>
    <string name="kitchen_text">المطبخ</string>
    <string name="settings_text">الاعدادات</string>
    <string name="login_text">تسجيل الدخول</string>
    <string name="logout_text">تسجيل خروج</string>
    <string name="profile_text">الملف الشخصي</string>
    <string name="track_order_text">متابعة الشحنات</string>
    <string name="dump_price1">15000جنية</string>
    <string name="dump_price2">10000جنية</string>
    <string name="sharedView">sharedView</string>
    <string name="demo">Demo</string>
    <string name="store_dumm">عالم الملابس</string>
    <string name="feedback_dumm">97.6% positive feedback |  </string>
    <string name="discount_text">Discounts</string>
    <string name="visit_store_dumm">Visit Store</string>
    <string name="english_categories_text">Categories</string>
    <string name="brands_text">Brands</string>
    <string name="coins_coupons_text"><![CDATA[Coins & Coupons]]></string>
    <string name="buyers">Buyers</string>
    <string name="freebies_reviews_text"><![CDATA[Freebies & Reviews]]></string>
    <string name="menu_text">القائمة</string>
    <string name="msg_no_internet">لا يوجد اتصال بالانترنت</string>
    <string name="toast_unexpected_error">toast_unexpected_error</string>
    <string name="toast_cannot_retrieve_cropped_image">toast_cannot_retrieve_cropped_image</string>
    <string name="edit_img">تعديل الصورة</string>
    <string name="no_data">لا يوجد بيانات</string>
    <string name="retry">اعادة المحاولة</string>
    <string name="dialog_msg_loading">الرجاء الانتظار</string>
    <string name="new_arrivals">وصل جديد</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bad_connection">خطأ في الاتصال</string>
    <string name="search"> البحث عن......</string>
    <string name="filter">التصفية</string>

    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="name_ar">الاسم</string>
    <string name="repeat_password_ar">ادخل كلمة السر مرة اخري</string>
    <string name="floor_ar">الدور</string>
    <string name="appt_number_ar">رقم الشقة</string>
    <string name="phone">رقم المحمول</string>
    <string name="district">المنطقه</string>
    <string name="city">المدينة</string>
    <string name="circle_morph_tansition">circle_morph_tansition</string>
    <string name="signin">الدخول</string>
    <string name="signup">تسجيل</string>


    <string name="add_to_cart">اضف الى السلة</string>
    <string name="card_title_product_specs">مواصفات المنتج</string>
    <string name="card_title_product_rating">تقييم</string>
    <string name="card_title_product_info">معلومات المنتج</string>
    <string name="card_title_product_reviews">المراجعات</string>
    <string name="my_rating">تقييمي</string>
    <string name="show_more">المزيد</string>
    <string name="le">جنيه</string>
    <string name="product_rated">تم الاضافة</string>
    <string name="write_review">اكتب مراجعتك</string>
    <string name="cancel">الغاء</string>
    <string name="confirm">تأكيد</string>
    <string name="review_submit_success">تم الاضافة بنجاح</string>
    <string name="submit">تأكيد</string>
    <string name="invalid_review">خطأ</string>
    <string name="added_to_cart">مضاف الي السلة</string>
    <string name="specs">مواصفات المنتج</string>
    <string name="reviews">مراجعات المنتج</string>
    <string name="settings_language">اللغة</string>
    <string name="settings_change_passowrd">كلمة المرور</string>
    <string name="settings_address"> العنوان</string>
    <string name="settings_phone"> رقم الهاتف</string>
    <string name="language_english">الانجليزية</string>
    <string name="language_arabic">العربية</string>
    <string name="order_created">تم ارسال الطلب بنجاح</string>
    <string name="order_create_failed">خطأ في ارسال الطلب</string>
    <string name="cart_is_empty">عفوا السلة فارغة</string>
    <string name="apartment">رقم الشقة</string>
    <string name="address">العنوان</string>
    <string name="shipping_address">عنوان الطلب</string>
    <string name="old_password">كلمة المرور القديمة</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="new_password_confirm">تأكيد كلمة المرور</string>
    <string name="old_email">البريد الالكتروني القديم</string>
    <string name="new_email">البريد الالكتروني الجديد</string>
    <string name="email_change">تغيير البريد الالكتروني</string>
    <string name="change_pass">تغيير كلمة المرور</string>
    <string name="new_phone">رقم الهاتف الجديد</string>
    <string name="old_phone">رقم الهاتف القديم</string>
    <string name="change_phone">تغيير رقم الهاتف</string>
    <string name="settings_email">تغيير البريد الالكتروني</string>
    <string name="brought_to_you_by">مقدم من</string>
    <string name="en">EN</string>
    <string name="ar">AR</string>
    <string name="phone_changed">تم تغير رقم الهاتف</string>
    <string name="password_changed">تم تغير الرقم السري</string>
    <string name="email_changed">تم تغير البريد الاكتروني</string>
    <string name="address_added">تم اضافة عنوان</string>
    <string name="egyptian_pound">جنية</string>
    <string name="other_products_2">منتجات اخرين</string>
    <string name="total_price">الرقم الكلي</string>
    <string name="order_num">رقم الطلب</string>
    <string name="order_date">تاريخ الطلب</string>
    <string name="delete">حذف</string>
    <string name="price">السعر</string>
    <string name="user">User</string>
    <string name="less">less</string>
    <string name="search_hint">البحث عن.....</string>
    <string name="password_change_error">كلمة المرور غير صحيحة</string>


</resources>
