<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/body_container"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_margin="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                style="@style/signup_edit_text"
                android:id="@+id/name_edit_text"
                android:hint="@string/name_ar"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            style="@style/signup_edit_text"
            android:id="@+id/email_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

    </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                style="@style/signup_edit_text"
                android:id="@+id/password_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                style="@style/signup_edit_text"
                android:id="@+id/repeat_password_edit_text"
                android:hint="@string/repeat_password_ar"
                android:inputType="textPassword"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                style="@style/signup_edit_text"
                android:imeOptions="actionDone"
                android:id="@+id/phone_edit_text"
                android:hint="@string/phone"
                android:inputType="phone"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/reg_btn"
            app:cardUseCompatPadding="true"
            app:cardElevation="3dp"
            app:cardCornerRadius="2dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/large_text_size"
                style="@style/text_bold"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <include layout="@layout/login_loading_view"/>


</android.support.design.widget.CoordinatorLayout>