<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    app:cardBackgroundColor="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp"
    app:cardCornerRadius="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start">


        <com.example.ahmed.octopusmart.View.Widget.SquareRelativeLayout
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/item_img"
                android:adjustViewBounds="true"
                android:layout_gravity="start"
                />

        </com.example.ahmed.octopusmart.View.Widget.SquareRelativeLayout>

        <LinearLayout
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp">


                    <TextView
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        style="@style/history_style"
                        android:text="@string/order_date"/>

                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_dumm"
                        style="@style/history_style"
                        android:id="@+id/date_text"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    >

                    <TextView
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        style="@style/history_style"
                        android:text="@string/order_num"
                        android:textColor="@color/black"
                        />
                    <!--order number-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/item_order_id"
                        style="@style/history_style"
                        android:gravity="center"
                        android:textSize="@dimen/mid_text_size"
                        android:text="949-141"
                        android:textColor="@color/black"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    >

                    <TextView
                        style="@style/history_style"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:text="@string/total_price"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <!--<price>-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/item_price"
                            style="@style/text_bold"
                            android:textSize="@dimen/large_text_size"
                            android:text="@string/price_dumm"
                            android:textColor="@color/colorAccent"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/text_bold"
                            android:textSize="@dimen/mid_text_size"
                            android:textColor="@color/colorAccent"
                            android:text="@string/egyptian_pound"/>
                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/history_linear"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_products"
                    android:textSize="@dimen/smal_text_size"
                    android:gravity="center"
                    style="@style/text_normal"
                    android:textColor="@color/blue_800"
                    android:id="@+id/other_products"
                    />
                <TextView
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smal_text_size"
                    style="@style/text_normal"
                    android:textColor="@color/blue_800"
                    android:text="5"
                    android:id="@+id/products_size"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smal_text_size"
                    style="@style/text_normal"
                    android:textColor="@color/blue_800"
                    android:text="@string/other_products_2"/>


                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_keyboard_arrow_left_black_48dp"
                    android:tint="@color/blue_800"
                    android:id="@+id/arrow_left"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
