<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="start"
            >

            <com.example.ahmed.octopusmart.View.Widget.SquareRelativeLayout
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/favorite_item_img"
                    android:adjustViewBounds="true"
                    android:layout_gravity="start"
                    />

            </com.example.ahmed.octopusmart.View.Widget.SquareRelativeLayout>


            <LinearLayout
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_dumm"
                    android:layout_marginTop="4dp"
                    android:textSize="@dimen/smal_text_size"
                    style="@style/text_normal"
                    android:textColor="@color/grey_700"
                    android:id="@+id/favorite_date_text"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/favorite_item_name"
                    style="@style/text_normal"
                    android:maxLines="2"
                    android:textSize="@dimen/smal_text_size"
                    android:text="@string/dummy_title"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:paddingTop="4dp"
            android:background="@color/blue_50"
            android:paddingBottom="4dp"
            android:layout_gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:gravity="start|bottom">




                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/smal_text_size"
                        android:text="@string/price"
                        style="@style/text_normal"
                        />
                    <TextView
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/favorite_item_price"
                        style="@style/text_bold"
                        android:textSize="@dimen/mid_text_size"
                        android:text="8000"
                        android:textColor="@color/colorAccent"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_bold"
                        android:textSize="@dimen/mid_text_size"
                        android:text="@string/egyptian_pound"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="4dp"
                    android:visibility="gone"
                    android:id="@+id/discount_layout"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/favorite_item_price_before"
                        style="@style/text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_dumm"
                        android:textColor="@color/grey_500"
                        android:textSize="@dimen/smal_text_size" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/delete_img"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:textSize="@dimen/large_text_size"
                style="@style/text_bold"
                android:layout_gravity="end"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
