<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="132dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="4dp"
                android:src="@drawable/mobile"
                android:id="@+id/tracking_item_img"
                android:adjustViewBounds="true"
                android:layout_height="96dp" />
            <TextView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:id="@+id/count_text"
                android:text="20"
                android:textSize="@dimen/smal_text_size"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/accent_circle_shape"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_title"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/smal_text_size"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            android:id="@+id/tracking_item_name"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_dumm"
                style="@style/text_bold"
                android:id="@+id/tracking_item_price"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/egyptian_pound"
                />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
